# simple_reports

./: Cargo.toml
src/: engine.rs  main.rs
src/generators/: delivery_note.rs  mod.rs
src/gui/: app.rs
src/models/: client.rs  item.rs  mod.rs  product.rs
src/storage/: file_storage.rs  mod.rs
